rename and add generic version which checks that the entity exists in a DbSet<> in the context

--- a/EntityFramework.Rx/EntityFramework.Rx.csproj
+++ b/EntityFramework.Rx/EntityFramework.Rx.csproj
@@ -68,8 +68,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Entry.cs" />
-    <Compile Include="ObservableEntity.cs" />
+    <Compile Include="DbObservable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
