--- a/EntityFramework.Rx/packages.config
+++ b/EntityFramework.Rx/packages.config
@@ -1,8 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net4" />
-  <package id="EntityFramework.Triggers" version="5.4.0" targetFramework="net40" />
-  <package id="EntityFramework.TypedOriginalValues" version="0.3.1" targetFramework="net40" />
+  <package id="EntityFramework.Triggers" version="6.0.0-prerelease" targetFramework="net40" />
+  <package id="EntityFramework.TypedOriginalValues" version="1.0.1" targetFramework="net40" />
   <package id="Rx-Core" version="2.2.5" targetFramework="net4" />
   <package id="Rx-Interfaces" version="2.2.5" targetFramework="net4" />
   <package id="Rx-Linq" version="2.2.5" targetFramework="net4" />
