--- a/Example/packages.config
+++ b/Example/packages.config
@@ -1,11 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="EntityFramework" version="6.1.3" targetFramework="net4" />
-  <package id="EntityFramework.Triggers" version="5.4.0" targetFramework="net40" />
-  <package id="EntityFramework.TypedOriginalValues" version="0.3.1" targetFramework="net40" />
-  <package id="Rx-Core" version="2.2.5" targetFramework="net4" />
-  <package id="Rx-Interfaces" version="2.2.5" targetFramework="net4" />
-  <package id="Rx-Linq" version="2.2.5" targetFramework="net4" />
-  <package id="Rx-Main" version="2.2.5" targetFramework="net4" />
-  <package id="Rx-PlatformServices" version="2.2.5" targetFramework="net4" />
+  <package id="CoContra" version="1.0.2" targetFramework="net45" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net45" />
+  <package id="EntityFramework.Triggers" version="6.0.8" targetFramework="net45" />
+  <package id="EntityFramework.TypedOriginalValues" version="1.0.1" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.3.0" targetFramework="net45" />
+  <package id="System.Reactive" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Core" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Interfaces" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Linq" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.PlatformServices" version="3.1.1" targetFramework="net45" />
+  <package id="System.Reactive.Windows.Threading" version="3.1.1" targetFramework="net45" />
 </packages>
