--- a/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
+++ b/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
@@ -26,8 +26,35 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.1.0" />
-    <PackageReference Include="System.Reactive" Version="3.1.1" />
+    <None Include="DbObservable.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DbObservable.Generated.tt</DependentUpon>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.2.0-beta2" />
+    <PackageReference Include="System.Reactive" Version="4.1.1" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="DbObservable.Generated.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <LastGenOutput>DbObservable.Generated.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="DbObservable.Generated.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>DbObservable.Generated.tt</DependentUpon>
+    </Compile>
   </ItemGroup>
 
 </Project>
