--- a/src/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
+++ b/src/EntityFrameworkCore.Rx/EntityFrameworkCore.Rx.csproj
@@ -1,20 +1,15 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <Description>Reactive extension wrappers for hot observables of Entity Framework entities</Description>
-    <AssemblyTitle>EntityFrameworkCore.Rx</AssemblyTitle>
-    <VersionPrefix>1.0.1</VersionPrefix>
     <Authors>Nick Strupat</Authors>
-    <AssemblyName>EntityFrameworkCore.Rx</AssemblyName>
     <PackageId>EntityFrameworkCore.Rx</PackageId>
     <PackageTags>rx;reactive;reactive-extensions;entity-framework-core;entityframeworkcore;entity;framework;core;triggers</PackageTags>
     <PackageProjectUrl>https://github.com/NickStrupat/EntityFramework.Rx</PackageProjectUrl>
     <PackageLicenseUrl>https://raw.githubusercontent.com/NickStrupat/EntityFramework.Rx/master/LICENSE</PackageLicenseUrl>
+    <Version>2.0.0-beta2</Version>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <AssemblyVersion>1.1.0.0</AssemblyVersion>
-    <FileVersion>1.1.0.0</FileVersion>
-    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,21 +21,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Include="DbObservable.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>DbObservable.Generated.tt</DependentUpon>
-    </None>
-    <None Include="IDbObservable.Generated.cs">
-      <DesignTime>True</DesignTime>
-      <AutoGen>True</AutoGen>
-      <DependentUpon>IDbObservable.Generated.tt</DependentUpon>
-    </None>
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.2.0-beta2" />
-    <PackageReference Include="System.Reactive" Version="4.1.1" />
+    <PackageReference Include="EntityFrameworkCore.Triggers" Version="1.2.0" />
+    <PackageReference Include="System.Reactive" Version="4.1.5" />
   </ItemGroup>
 
   <ItemGroup>
