--- a/src/EntityFramework.Rx.AspNetCore/EntityFramework.Rx.AspNetCore.csproj
+++ b/src/EntityFramework.Rx.AspNetCore/EntityFramework.Rx.AspNetCore.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>net461</TargetFramework>
+    <TargetFrameworks>net461;netstandard2.1</TargetFrameworks>
     <Description>EntityFramework.Rx integration library for ASP.NET Core</Description>
     <Authors>Nick Strupat</Authors>
     <PackageTags>rx;reactive;reactive-extensions;entity-framework;entityframework;entity;framework;triggers</PackageTags>
@@ -17,9 +17,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFramework.Rx" Version="2.0.0-beta2" />
+    <PackageReference Include="EntityFramework.Rx" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
-    <PackageReference Include="NickStrupat.EntityFramework.Triggers.AspNetCore" Version="1.0.0" />
+    <PackageReference Include="NickStrupat.EntityFramework.Triggers.AspNetCore" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
