--- a/src/EntityFrameworkCore.Rx.AspNetCore/EntityFrameworkCore.Rx.AspNetCore.csproj
+++ b/src/EntityFrameworkCore.Rx.AspNetCore/EntityFrameworkCore.Rx.AspNetCore.csproj
@@ -21,9 +21,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="EntityFrameworkCore.Rx" Version="2.0.0-beta2" />
+    <PackageReference Include="EntityFrameworkCore.Rx" Version="2.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.1.1" />
-    <PackageReference Include="NickStrupat.EntityFrameworkCore.Triggers.AspNetCore" Version="1.0.0" />
+    <PackageReference Include="NickStrupat.EntityFrameworkCore.Triggers.AspNetCore" Version="1.0.2" />
   </ItemGroup>
 
 </Project>
